@@ -3,6 +3,9 @@ Comprehensive changes can be found in Git change history:
 	https://github.com/mkahvi/taskmaster/commits/master
 
 ## [0.12...]
+### 2018-12-24
+	Removed: Per watchlist rule Rescan option. It was only used if global scanning was disabled.
+		Since the mechanism is the same as global scan, it is recommended to just use potentially faster global scan instead.
 ### 2018-12-23
 	Fixed: Clicking on tray icon now properly restores the window to visibility. Even when minimized.
 	Added: The main window or the tray gaining user interaction temporarily lifts TM to higher priority to make it more responsive
